# SeaSussed

./: .gitignore  CLAUDE.md  LICENSE  README.md  progress.txt
.claude/: settings.json
.githooks/: pre-commit
.github/workflows/: deploy.yml
backend/: .dockerignore  Dockerfile  alternatives.py  cert_education.py  database.py  explanation.py  gemini_client.py  geolocation.py  health.py  main.py  models.py  pipeline.py  pyproject.toml  research.py  scoring.py  voice_session.py  wolfram.py
backend/agents/: screen_analyzer.py
backend/scripts/: benchmark.py  build_database.py
backend/tests/: test_analyze.py  test_database.py  test_explanation.py  test_geolocation.py  test_health.py  test_models.py  test_pipeline.py  test_research.py  test_scoring.py  test_screen_analyzer.py  test_voice.py  test_wolfram.py
docs/decisions/: 2026-03-04-live-agent-behavior-principles.md
docs/plans/: 2026-03-01-seasussed-mvp-v2.md  2026-03-01-seasussed-mvp.md  2026-03-02-voice-mode.md  2026-03-02-wolfram-integration.md  2026-03-09-web-research-carbon.md  2026-03-10-food-miles.md
docs/plans/2026-03-01-seasussed-mvp-phases/: phase-1-gcp-backend-scaffold.md  phase-2-extension-scaffold.md  phase-3-sustainability-database.md  phase-4-gemini-agent-pipeline.md  phase-5-extension-ui.md  phase-6-testing-optimization.md  phase-7-deployment-submission.md
docs/research/: 2026-03-01-seasussed-research.md
extension/: audio-worklet-processor.js  background.js  config.js  content_script.js  manifest.json  mic-permission.html  mic-permission.js  sidepanel.html  sidepanel.js  voice-client.js
(+23 files in other folders)
